--- a/.github/workflows/quarto.yml
+++ b/.github/workflows/quarto.yml
@@ -29,12 +29,17 @@ jobs:
         with:
           sparse-checkout: hogg2010.qmd
           sparse-checkout-cone-mode: false
+      - uses: actions/cache@v4
+        with:
+          path: ~/.julia
       - uses: quarto-dev/quarto-actions/setup@v2
         with:
           tinytex: true
       - uses: julia-actions/setup-julia@v1
       - run: julia --project -e 'using Pkg; Pkg.add(["Turing", "StatsPlots", "LogExpFunctions"])'
       - uses: quarto-dev/quarto-actions/render@v2
+        with:
+          path: hogg2010.qmd
       - uses: actions/upload-pages-artifact@v3
 
   deploy:
