--- a/.github/workflows/quarto.yml
+++ b/.github/workflows/quarto.yml
@@ -30,11 +30,17 @@ jobs:
           sparse-checkout: hogg2010.qmd
           sparse-checkout-cone-mode: false
       - uses: julia-actions/setup-julia@v1
-      - name: install dependencies
+      - name: install dependencies and iosevka fonts
         run: |
           sudo apt-get update
           sudo apt-get install -y librsvg2-bin
-          julia --project=. -e 'using Pkg; Pkg.add(["Turing", "StatsPlots", "LogExpFunctions"])'
+          julia --project=. -e 'using Pkg; Pkg.add(["Turing", "StatsPlots", "LogExpFunctions", "KernelDensity"])'
+          mkdir /tmp/iosevka
+          RELEASE="33.2.2"
+          wget -P /tmp/iosevka https://github.com/be5invis/Iosevka/releases/download/v$RELEASE/PkgTTC-Iosevka-$RELEASE.zip
+          unzip /tmp/iosevka/*.zip -d /tmp/iosevka
+          sudo mv /tmp/iosevka/*.ttc /usr/local/share/fonts/
+          sudo fc-cache -fv
       - uses: quarto-dev/quarto-actions/setup@v2
         with:
           tinytex: true
@@ -49,7 +55,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - uses: actions/deploy-pages@v4
+      - id: deployment
+        uses: actions/deploy-pages@v4
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
